Solucionado errores resultados de Test con simulador macroscópico (ratings, distancia, riesgo). Limpieza de código.