@@ -554,7 +554,8 @@ private void initControlPanel() {
 	private void loadAttributeButtons() {
 		for(Component c : buttons.getComponents()) {
 			JButton b = (JButton)c;
-			if(selectedTables.size() > 0 && selectedTables.getLast().equals(b.getText())) b.setEnabled(false);
+			// if(selectedTables.size() > 0 && selectedTables.getLast().equals(b.getText())) b.setEnabled(false);
+			if(selectedTables.size() > 0 && selectedTables.get(selectedTables.size()-1).equals(b.getText())) b.setEnabled(false);
 		}
 		List<Pair<String,String>> columns = MainSimulator.db.getAttributesOfTables(selectedTables);
 		attributeButtons.removeAll();
